# walrus_steering

./: .favorites.json
walrus_steering/: .gitignore  .pre-commit-config.yaml  pyproject.toml  run.sh  start.py
walrus_steering/steering_utils/: tensor_creator.py
walrus_steering/tests/: conftest.py  test_checkpoint.py  test_dataset.py  test_import.py  test_jitterer.py  test_trainer.py  test_trainer_linear_model.py
walrus_steering/walrus_steering/: train.py
walrus_steering/walrus_steering/configs/: config.yaml
walrus_steering/walrus_steering/configs/checkpoint/: defaults.yaml  none.yaml
walrus_steering/walrus_steering/configs/data/: 2d_3d_all.yaml  2d_all.yaml  2d_steering_subset.yaml  2d_subset_shear.yaml  MHD_256.yaml  MHD_64.yaml  acoustic_scattering_maze_2d.yaml  active_matter.yaml  convective_envelope_rsg.yaml  debug.yaml  euler_quadrants.yaml  helmholtz_staircase.yaml  pattern_formation.yaml  planetswe.yaml  post_neutron_star_merger.yaml  rayleigh_benard.yaml  test.yaml  (+7 more)
walrus_steering/walrus_steering/data/: inflated_dataset.py  mixed_dset_sampler.py  multidatamodule.py  multidataset.py
walrus_steering/walrus_steering/example_run_scripts/: load_validate_checkpoint.sh  rusty_train_debug.sh  start_dist.sh  start_local.sh  tuning_script_3d.sh  tuning_script_light_debug.sh
walrus_steering/walrus_steering/models/: __init__.py  isotropic_model.py
walrus_steering/walrus_steering/optim/: schedulers.py
walrus_steering/walrus_steering/trainer/: checkpoints.py  training.py
walrus_steering/walrus_steering/utils/: distribution_utils.py  experiment_utils.py
(+35 files in other folders)
