[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["temporary_mppx_name"]

[project]
name = "temporary_mppx_name"
requires-python = ">=3.8"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "einops>=0.8,<0.9",
    "h5py>=3.9.0,<4",
    "hydra-core>=1.3,<2",
    "imageio>=2.25,<3",
    "matplotlib>=3.8,<4",
    "neuraloperator==0.3.0",
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "plotly>=5.0,<6",
    "the_well[benchmark] @ git+https://github.com/PolymathicAI/the_well_internal.git@master",
    "timm>=1.0,<2",
    "torch_harmonics>=0.6,<0.7",
    "torch>=2.4",
    "torchinfo>=1.8.0,<2",
    "wandb>=0.17.9,<0.18",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "isort[colors]>=5.13.2",
    "pytest-order>=1.3.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6",
    "types-redis>=4",
    "types-requests>=2",
    "types-six>=1",
    "types-tabulate>=0.9",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "walrus_public.optim.distributed_shampoo.*"
ignore_errors = true
